--- a/mobile/src/main/res/layout/activity_main.xml
+++ b/mobile/src/main/res/layout/activity_main.xml
@@ -10,15 +10,18 @@
         android:scrollbars="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/imageButton"
+        android:layout_above="@+id/addItem"
         android:layout_alignParentEnd="true" />
 
-    <ImageButton
-        android:layout_width="wrap_content"
+    <Button
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/imageButton"
-        android:background="@android:drawable/ic_input_add"
+        android:id="@+id/addItem"
         android:layout_alignParentBottom="true"
-        android:layout_alignEnd="@+id/my_recycler_view" />
+        android:layout_alignEnd="@+id/my_recycler_view"
+        android:text="add an item"
+        android:drawableRight="@android:drawable/ic_input_add"
+        android:layout_marginTop="10dp"
+        android:background="#00ffffff" />
 
 </RelativeLayout>
