--- a/mobile/src/main/res/layout/activity_main.xml
+++ b/mobile/src/main/res/layout/activity_main.xml
@@ -23,5 +23,13 @@
         android:drawableRight="@android:drawable/ic_input_add"
         android:layout_marginTop="10dp"
         android:background="#00ffffff" />
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/open"
+        android:text="add an item"
+        android:drawableRight="@android:drawable/ic_lock_power_off"
+        android:layout_marginTop="10dp"
+        android:background="#00ffffff" />
 
 </RelativeLayout>
