--- a/mobile/src/main/res/layout/add_item_view.xml
+++ b/mobile/src/main/res/layout/add_item_view.xml
@@ -1,14 +1,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-    <ImageView
-        android:src="@drawable/ic_launcher"
-        android:layout_width="match_parent"
-        android:layout_height="64dp"
-        android:scaleType="center"
-        android:background="#FFFFBB33"
-        android:contentDescription="@string/app_name" />
+    android:layout_height="wrap_content"
+    android:id="@+id/dialogVerticalLayout"
+    android:background="#FFFF6F44">
+
     <EditText
         android:id="@+id/newItemName"
         android:layout_width="match_parent"
@@ -17,15 +13,8 @@
         android:layout_marginLeft="4dp"
         android:layout_marginRight="4dp"
         android:layout_marginBottom="4dp"
-        android:hint="item name..." />
-    <EditText
-        android:id="@+id/newNote"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:layout_marginLeft="4dp"
-        android:layout_marginRight="4dp"
-        android:layout_marginBottom="16dp"
-        android:fontFamily="sans-serif"
-        android:hint="optional note"/>
+        android:hint="item name..."
+        android:textColorHint="#8fffffff"
+        android:textColor="#ffffffff" />
+
 </LinearLayout>
