--- a/mobile/src/main/res/layout/card_view.xml
+++ b/mobile/src/main/res/layout/card_view.xml
@@ -11,7 +11,8 @@
         android:layout_height="50dp"
         android:layout_alignParentTop="true"
         android:scaleType="fitCenter"
-        android:src="@drawable/ic_launcher" />
+        android:src="@drawable/ic_launcher"
+        android:background="#ee30b77f" />
 
     <TextView
         android:id="@+id/itemName"
@@ -22,12 +23,7 @@
         android:layout_margin="8dp"
         android:maxLines="3"
         android:text="wowowowow"
-        android:layout_gravity="center" />
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/purchaseCheck"
-        android:layout_gravity="center_vertical|right" />
+        android:layout_gravity="center"
+        android:textSize="20sp" />
 
 </android.support.v7.widget.CardView>
