--- a/mobile/src/main/res/layout/card_view.xml
+++ b/mobile/src/main/res/layout/card_view.xml
@@ -26,4 +26,14 @@
         android:layout_gravity="center"
         android:textSize="20sp" />
 
+    <ImageView
+        android:id="@+id/itemTrash"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:scaleType="fitCenter"
+        android:src="@android:drawable/ic_notification_clear_all"
+        android:layout_gravity="center_vertical|right"
+        android:paddingRight="5dp" />
+
 </android.support.v7.widget.CardView>
