--- a/mobile/src/main/res/layout/activity_main.xml
+++ b/mobile/src/main/res/layout/activity_main.xml
@@ -31,7 +31,9 @@
         android:text="Sync"
         android:id="@+id/open"
         android:layout_alignTop="@+id/addItem"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:background="#FFFF6F44"
+        android:textColor="#ffffffff" />
 
 
 </RelativeLayout>
